avec les images c'est mieux

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <div class="container">
     <div class="card text-center">
-      <img class ="img-circle" id="logo" src="/images/tigroo.jpg" alt="tigroo">
+      <img class ="img-circle" id="logo" src="images/tigroo.jpg" alt="tigroo">
       <h1>Louise Mortelette</h1>
       <h2>Etudiante batch#68 Le Wagon</h2>
       <p>Après avoir travaillé 8 ans comme secrétaire médicale, j'ai souhaité faire une reconversion professionnelle dans le dev. Après une première formation Développeur Logiciel avec l'Afpa, à l'issue de laquelle j'ai obtenu mon titre (juin 2016), j'ai souhaité faire une seconde formation plus poussée et plus précisément en développement web afin de monter en compétences.</p>
@@ -49,7 +49,7 @@
           <tr>
             <div>
               <td>
-                <img class="img-mini" src="/images/fifth_element.jpg" alt="The Fifth Element">
+                <img class="img-mini" src="images/fifth_element.jpg" alt="The Fifth Element">
               </td>
             </div>
             <div>
@@ -61,7 +61,7 @@
           </tr>
           <tr>
             <td>
-              <img class="img-mini" src="/images/shrek_2.jpg" alt="Shrek 2">
+              <img class="img-mini" src="images/shrek_2.jpg" alt="Shrek 2">
             </td>
             <td>
               <h3>Shreck 2</h3>
@@ -70,7 +70,7 @@
           </tr>
           <tr>
             <td>
-              <img class="img-mini" src="/images/scott_pilgrim.jpg" alt="Scott Pilgrim">
+              <img class="img-mini" src="images/scott_pilgrim.jpg" alt="Scott Pilgrim">
             </td>
             <td>
               <h3>Scott Pilgrim VS The World</h3>
