--- a/index.html
+++ b/index.html
@@ -13,12 +13,24 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div id="background_opacity">
+  <div id="background_opacity">
     <div id="sidebar">
       <ul class="list-inline text-center">
-        <li><i class="fa fa-camera-retro" aria-hidden="true"></i></li>
-        <li><i class="fa fa-video-camera" aria-hidden="true"></i></li>
-        <li><i class="fa fa-book" aria-hidden="true"></i></li>
+        <li>
+          <a href="#">
+            <i class="fa fa-camera-retro" aria-hidden="true"></i>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <i class="fa fa-video-camera" aria-hidden="true"></i>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <i class="fa fa-book" aria-hidden="true"></i>
+          </a>
+        </li>
       </ul>
     </div>
     <div id="page-content">
